Jann 30/objects/Assignment_Routing_Rules__c.object
<CustomObject>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Telecom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supporting Assets &amp; Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application and SaaS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infrastructure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solution Delivery w/Preferred Suppliers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solution Delivery w/non-Preferred Supplier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Production Support w/Preferred Supplier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Production Support w/non-Preferred Supplier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Professional Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strategic Supplier Vendor Governance</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Legal_Assignee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Legal Assignee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Assignment_Routing_Rules2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <label>Organization</label>
        <picklist>
            <picklistValues>
                <fullName>GIT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CONA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TCCC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BIG IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CCR IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CCNA IT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Procurement_Assignee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Procurement Assignee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Assignment_Routing_Rules1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <label>Request Type</label>
        <picklist>
            <picklistValues>
                <fullName>NDA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RFI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RFP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eval Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Master</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SOW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Schedule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change In Existing Master</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Letter Of Termination</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Network Access Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Procurement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Legal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Vendor_Governance_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor Governance User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Assignment_Routing_Rules4</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>IT-SES Assignment Routing Rules</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Request_Type__c</columns>
        <columns>Category__c</columns>
        <columns>Organization__c</columns>
        <columns>Procurement_Assignee__c</columns>
        <columns>Legal_Assignee__c</columns>
        <columns>Vendor_Governance_User__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>rsas2</fullName>
        <columns>NAME</columns>
        <columns>Request_Type__c</columns>
        <columns>Category__c</columns>
        <columns>Organization__c</columns>
        <columns>Procurement_Assignee__c</columns>
        <columns>Legal_Assignee__c</columns>
        <columns>Vendor_Governance_User__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Organization__c</field>
            <operation>equals</operation>
            <value>BIG</value>
        </filters>
        <label>rsas2</label>
    </listViews>
    <nameField>
        <displayFormat>ASR-{0000}</displayFormat>
        <label>Assignment Routing Rules Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IT-SES Assignment Routing Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ITPR_WithPreferredCheck</fullName>
        <active>false</active>
        <errorConditionFormula>OR( ISPICKVAL(Category__c, &apos;Production Support w/Preferred Supplier&apos;), ISPICKVAL(Category__c ,&apos;Solution Delivery w/Preferred Suppliers&apos;))</errorConditionFormula>
        <errorMessage>This selection is not processed in this tool. Please refer to training guide located at this site: https://partner.coca-cola.com/sites/GITWPs/SitePages/Home.aspx</errorMessage>
    </validationRules>
</CustomObject>